# CMemoryLeaks

./: README.md
AddressSanitizeTest/: build.gradle
AddressSanitizeTest/app/: build.gradle
AddressSanitizeTest/app/src/androidTest/java/com/yinlib/exampleasan/: ExampleInstrumentedTest.java
AddressSanitizeTest/app/src/main/: AndroidManifest.xml
AddressSanitizeTest/app/src/main/cpp/: native-lib.cpp
AddressSanitizeTest/app/src/main/java/com/yinlib/sanitize/test/: MainActivity.java
AddressSanitizeTest/app/src/main/res/layout/: activity_main.xml
AddressSanitizeTest/app/src/main/res/values/: strings.xml
AddressSanitizeTest/app/src/test/java/com/yinlib/exampleasan/: ExampleUnitTest.java
AddressSanitizeTest/app/wrap_add_dir/res/lib/arm64-v8a/: wrap.sh
AddressSanitizeTest/gradle/wrapper/: gradle-wrapper.properties
SanitizerTest/: .gitignore  CMakeLists.txt  memory_leak.sh  thread_sanitize.sh  valgrind_memory_check.sh
SanitizerTest/src/: main.cpp  memory_leak.cpp  sanitize_test.cpp  sanitize_test.h  thread_sanitize.cpp
